--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-interval": "^2.1.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "uniqid": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
